webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
/**
 * Type: Base.
 * Base styling.
 */

/* Box sizing */
* {
  box-sizing: border-box;

  &::before,
  &::after {
    box-sizing: border-box;
  }
}

/* Body */
body {
  position: relative;
  width: 100%;
  margin: 0;
  padding-top: var(--header-height-mobile);
  overflow-x: hidden;
  overflow-y: visible;
  color: var(--color-purple);
  font-weight: var(--base-font-weight);
  font-size: var(--base-font-size);
  font-family: var(--base-font-family);
  line-height: 1.5;
  background-color: var(--site-background-color);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  @media (--viewport-ms-min) {
    padding-top: var(--header-height);
  }

  @media (--viewport-lg-min) {
    padding-top: calc(var(--header-height) + var(--meta-menu-height));
  }

  &.no-scroll {
    overflow: hidden;
  }
}

/* Links */
a {
  color: var(--theme-link-color);
  text-decoration: underline;
  text-decoration-skip-ink: auto;
}

button {
  background: none;
  border: none;
  outline: none;
}

/* Horizontal ruler */
hr {
  margin: 30px 0;
  border: none;
  border-bottom: 1px solid var(--theme-divider-background-color);
}

/* Image handling */
img {
  &.align-left {
    display: block;
    float: none;
    margin-right: auto;
    margin-left: 0;
  }

  &.align-center {
    display: block;
    float: none;
    margin-right: auto;
    margin-left: auto;
  }

  &.align-right {
    display: block;
    float: none;
    margin-right: 0;
    margin-left: auto;
  }
}

figure {
  width: auto;
  margin: 0;
  text-align: left;

  &.align-left {
    float: none;
    width: auto;
    text-align: left;

    img {
      margin-left: 0 !important;
    }
  }

  &.align-center {
    width: 100%;
    text-align: center;
  }

  &.align-right {
    float: none;
    width: auto;
    text-align: right;

    img {
      margin-right: 0 !important;
    }
  }

  img {
    display: block;
    float: none !important;
    max-width: 100%;
    height: auto;
    margin: 0 auto;
    transition: opacity .2s;
  }

  figcaption {
    margin-top: 4px;
    margin-bottom: 8px;
    color: var(--color-purple);
    font-size: 11px;
  }
}

.ajax-progress-throbber {
  position: absolute;
  top: -10px;
  right: -15px;
}

table {
  width: 100% !important;
  border-collapse: collapse !important;
}

.table-responsive {
  max-width: calc(100vw - 50px);
  overflow: auto;
}

#drupal-modal .section {
  width: 100%;
  padding-top: 0 !important;
  padding-bottom: 0 !important;
}

#media-library-view .views-exposed-form {
  display: flex;
  flex-wrap: wrap;
}

.js-media-library-views-form {
  img {
    width: 100%;
    height: auto;
  }
}

#media-library-view .views-row .views-field-media-library-select-form {
  z-index: 999;
}

.node-preview-container {
  position: sticky;
  top: calc(var(--header-height) + var(--meta-menu-height));
  max-width: var(--container-width);
  margin-right: auto;
  margin-left: auto;
  padding-right: var(--container-spacing);
  padding-left: var(--container-spacing);

  .js-form-item-view-mode {
    display: none;
  }

  a {
    position: relative;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    min-height: 55px;
    padding: 0 40px;
    overflow: visible;
    color: var(--color-white);
    font-weight: 800;
    font-size: var(--base-font-size);
    font-family: var(--base-font-family);
    white-space: nowrap;
    text-decoration: none;
    background-color: var(--color-green-dark);
    border: 2px solid var(--color-green-dark);
    border-radius: 50px;
    cursor: pointer;

    &::before {
      position: absolute;
      top: 50%;
      left: 20px;
      display: block;
      width: 12px;
      height: 12px;
      border-bottom: 2px solid var(--theme-arrow-color);
      border-left: 2px solid var(--theme-arrow-color);
      transform: translateY(-50%) rotate(45deg);
      content: "";
    }
  }
}


@media print {
  body,
  p,
  h1,
  h2,
  h3,
  ul,
  ol,
  div {
    position: static;
    float: none;
    width: auto;
    margin: 0;
    padding: 0;
    overflow: visible;
    border: 0;
  }

  p {
    page-break-inside: avoid;
  }

  ul,
  ol {
    margin-bottom: 20px;
    padding-left: 20px;
    page-break-inside: avoid;
  }

  table {
    page-break-inside: avoid;
  }
}

.entities-list .item-container > input {
  width: 100%;
}

